[package]
authors = [ "Aiden Langley <aiden@nedia.dev>" ]
description = "A small library for dealing with the output of `bspc wm -d` & `bspc query` from bspwm"
documentation = "https://docs.rs/lib-bspwm"
edition = "2021"
keywords = [ "bspwm", "xorg" ]
license = "MIT OR Apache-2.0"
name = "lib-bspwm"
repository = "https://github.com/aidenlangley/lib-bspwm"
version = "0.1.0"

[dependencies]
serde = { version = "1.0.136", features = [ "derive" ] }
serde_json = "1.0.79"
